<resources>
    <string name="app_name">IIITD Connect</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_details_student">Student</string>
    <string name="fill_details_alumni">Alumni</string>
    <string name="fill_details_faculty">Faculty</string>
    <string name="fill_details">Fill Details</string>
    <string name="Email">Email</string>
    <string name="Branch">Branch</string>
    <string name="Conatct_no">Contact No.</string>
    <string name="D_O_B">D.O.B</string>
    <string name="Linkdin">LinkedIn</string>
    <string name="Website">Website</string>
    <string name="Name">Name</string>
    <string name="Year_of_passing">Year of passing</string>
    <string name="Type_here">None</string>
    <string name="Save">Save</string>
    <string name="Status">Status</string>
    <string name="Company">Company</string>
    <string name="Edit">Edit</string>
    <string name="Cancel">Cancel</string>
    <string name="Loc">Venue</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Expertise">Expertise</string>
    <string name="Department">Department</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER NAME </string>
    <string name="nav_header_subtitle">Student, 2017XXX</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_signOut">Sign Out</string>

    <string name="Title">Title:</string>
    <string name="Body">Body:</string>
    <string name="Tags">Tags:</string>
    <string name="share">Share Post</string>
    <string name="Dark">Dark Theme</string>
    <string name="signout">Sign Out</string>
    <string name="notifications">Notifications</string>

    <string name = "Welcome_to_IIITD_Connect">IIITD Connect</string>
    <string name = "Anshuman">Anshuman</string>
    <string name = "Bhavya">Bhavya</string>
    <string name = "Shloak">Shloak</string>
    <string name = "SANKET">sanket</string>
    <string name = "Bhrigu">Bhrigu</string>
    <string name = "Mohit">Mohit</string>
    <string name = "Deepak">Deepak</string>
    <string name = "AIshwarya">Aishwarya</string>
    <string name = "Ali">ALi</string>
    <string name = "Anuj">Anuj</string>
    <string name = "yadav">yadav</string>

    <string-array name="statusarray">
        <item>Select Status</item>
        <item>Employed</item>
        <item>Studying</item>
        <item>Unemployed</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="degreesarray">
        <item>Select Branch</item>
        <item>CSE</item>
        <item>CSAM</item>
        <item>CSD</item>
        <item>CSSS</item>
        <item>CSAI</item>
        <item>CSAB</item>
        <item>ECE</item>
    </string-array>
    <string-array name="departmentarray">
        <item>Select Department</item>
        <item>Computer Science</item>
        <item>Electronics</item>
        <item>Biology</item>

    </string-array>

    <string-array name="allTags">
        <item>Alumni</item>
        <item>Faculty</item>
        <item>Seminar</item>
        <item>Workshop</item>
        <item>Research</item>
        <item>Job</item>
        <item>Internship</item>
        <item>Club</item>
        <item>Event</item>
        <item>Company</item>
        <item>Placement</item>
        <item>Post-Graduation</item>
    </string-array>
</resources>
