<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_feed_24dp"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_about_us_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout_24dp"
            android:title="My Posts" />
    </group>

</menu>
