<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/fill_details_student"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/fill_details_student" />

    <Button
        android:id="@+id/fill_details_alumni"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/fill_details_alumni"
        android:layout_toRightOf="@+id/fill_details_student" />

    <Button
        android:id="@+id/fill_details_faculty"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/fill_details_faculty"
        android:layout_toRightOf="@+id/fill_details_alumni" />

</RelativeLayout>