<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <Switch
        android:id="@+id/Darktheme"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Dark"
        android:fontFamily="@font/opensans_regular"
        android:textSize="25dp" />

    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/notifications" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/sign_out"
        android:theme="@style/PrimaryButton"
        android:text="@string/signout"
        android:textAlignment="center"/>

</LinearLayout>