<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_margin="20dp"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/photodetails"
            android:layout_width="223dp"
            android:layout_height="223dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/photo"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="1" />

        <TextView
            android:id="@+id/namedetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="24sp"
            android:layout_below="@id/photodetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editnamedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/photodetails"
            android:layout_alignRight="@id/namedetails"/>

        <TextView
            android:id="@+id/branchdetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Branch"
            android:textSize="24sp"
            android:layout_below="@id/namedetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editbranchdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/namedetails"
            android:layout_alignRight="@id/branchdetails"/>

        <TextView
            android:id="@+id/contactdetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Conatct_no"
            android:textSize="24sp"
            android:layout_below="@id/branchdetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editcontactdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/branchdetails"
            android:layout_alignRight="@id/contactdetails"/>

        <TextView
            android:id="@+id/dobdetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/D_O_B"
            android:textSize="24sp"
            android:layout_below="@id/contactdetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editdobdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/contactdetails"
            android:layout_alignRight="@id/dobdetails"/>

        <TextView
            android:id="@+id/linkdindetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Linkdin"
            android:textSize="24sp"
            android:layout_below="@id/dobdetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editlinkdindetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/dobdetails"
            android:layout_alignRight="@id/linkdindetails"/>

        <TextView
            android:id="@+id/websitedetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Website"
            android:textSize="24sp"
            android:layout_below="@id/linkdindetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/editwebsitedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/linkdindetails"
            android:layout_alignRight="@id/websitedetails"/>



        <TextView
            android:id="@+id/yearofpassdetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Year_of_passing"
            android:textSize="24sp"
            android:layout_below="@id/websitedetails"
            android:paddingTop="20dp"/>
        <TextView
            android:id="@+id/edityearofpassdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type_here"
            android:paddingTop="20dp"
            android:layout_below="@id/websitedetails"
            android:layout_alignRight="@id/yearofpassdetails"/>

        <Button
            android:id="@+id/Editdetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Edit"
            android:layout_below="@id/yearofpassdetails"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</ScrollView>